--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,15 @@
 [[headers]]
-  for = "/*.jsx"
+  for = "/*"
   [headers.values]
     Content-Type = "application/javascript"
+
+[[redirects]]
+  from = "/assets/*"
+  to = "/assets/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
